--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -47,7 +47,7 @@
         </div>
 
 
-            <!-- Карта товара -->
+        <!-- Карта товара -->
         {% for good in goods %}
             <div class="col-lg-4 col-md-6 p-4">
                 <div class="card border-primary rounded custom-shadow">
@@ -57,10 +57,10 @@
                         <img src="{% static 'deps/images/no image.png' %}" class="card-img-top" alt="...">
                     {% endif %}
                     <div class="card-body">
-                        <a href="{%  url 'catalog:product' good.slug %}">
+                        <a href="{% url 'catalog:product' good.slug %}">
                             <p class="card-title">{{ good.name }}</p>
                         </a>
-                        <p class="card-text text-truncate">{{ good.description }}</p>
+                        <p class="card-text">{{ good.description|truncatechars:100 }}</p>
                         <p class="product_id">id: {{ good.display_id }}</p>
                         <div class="d-flex justify-content-between">
                             {% if good.discount %}
@@ -79,26 +79,49 @@
                 </div>
             </div>
         {% endfor %}
-            <!-- Карта товара -->
+        <!-- Карта товара -->
 
 
     </div>
     <!-- Пагинация -->
+
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center my-4">
-            <div class="custom-shadow d-flex">
-                <li class="page-item disabled">
-                    <a class="page-link">Previous</a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
-                </li>
+            <div class="custom-shadow d-flex rounded">
+                {% if goods.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="{% url 'catalog:catalog' cat_slug  goods.previous_page_number %}">Назад</a>
+                    </li>
+                    {% else %}
+                    <li class="page-item disabled">
+                        <a class="page-link">Назад</a>
+                    </li>
+                {% endif %}
+
+                {% for page in goods.paginator.page_range %}
+                    {% if page >= goods.number|add:-2  and page <= goods.number|add:2 %}
+                        <li class="page-item {% if goods.number == page %}active{% endif %}"><a class="page-link"
+                                                                                                href="{% url 'catalog:catalog' cat_slug  page %}">{{ page }}</a>
+                        </li>
+                    {% endif %}
+
+                {% endfor %}
+
+                {% if goods.has_next %}
+                    <li class="page-item">
+                        <a class="page-link"
+                           href="{% url 'catalog:catalog' cat_slug  goods.next_page_number %}">Вперед</a>
+                    </li>
+                    {% else %}
+                    <li class="page-item disabled">
+                        <a class="page-link">Вперед</a>
+                    </li>
+                {% endif %}
+
             </div>
         </ul>
     </nav>
+
 {% endblock %}
 
 {% block footer %}
