--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -90,9 +90,9 @@
             <div class="custom-shadow d-flex rounded">
                 {% if goods.has_previous %}
                     <li class="page-item">
-                        <a class="page-link" href="{% url 'catalog:catalog' cat_slug  goods.previous_page_number %}">Назад</a>
+                        <a class="page-link" href="?page={{ goods.previous_page_number }}">Назад</a>
                     </li>
-                    {% else %}
+                {% else %}
                     <li class="page-item disabled">
                         <a class="page-link">Назад</a>
                     </li>
@@ -101,7 +101,7 @@
                 {% for page in goods.paginator.page_range %}
                     {% if page >= goods.number|add:-2  and page <= goods.number|add:2 %}
                         <li class="page-item {% if goods.number == page %}active{% endif %}"><a class="page-link"
-                                                                                                href="{% url 'catalog:catalog' cat_slug  page %}">{{ page }}</a>
+                                                                                                href="?page={{ page }}">{{ page }}</a>
                         </li>
                     {% endif %}
 
@@ -110,9 +110,9 @@
                 {% if goods.has_next %}
                     <li class="page-item">
                         <a class="page-link"
-                           href="{% url 'catalog:catalog' cat_slug  goods.next_page_number %}">Вперед</a>
+                           href="?page={{ goods.next_page_number }}">Вперед</a>
                     </li>
-                    {% else %}
+                {% else %}
                     <li class="page-item disabled">
                         <a class="page-link">Вперед</a>
                     </li>
