Футер теперь внизу

--- a/baseitems/templates/baseitem/about.html
+++ b/baseitems/templates/baseitem/about.html
@@ -12,9 +12,9 @@
     <p class="m-2">{{ text_on_page }}</p>
     </div>
 {% endblock %}
-{% block footer %}<footer class="py-4 bg-dark">
+{% block footer %}
+    <footer class="mt-auto py-3 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Baks Hi-Tech store 2024</p>
+            <p class="m-2 text-center text-white">Copyright &copy; Baks Hi-Tech store 2024</p>
         </div>
-    </footer>
-{% endblock %}
+    </footer> {% endblock %}
