--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -60,3 +60,9 @@
         </div>
     </div>
 {% endblock %}
+{% block footer %}
+    <footer class="mt-auto py-3 bg-dark">
+        <div class="container">
+            <p class="m-2 text-center text-white">Copyright &copy; Baks Hi-Tech store 2024</p>
+        </div>
+    </footer> {% endblock %}
