--- a/baseitems/templates/baseitem/base.html
+++ b/baseitems/templates/baseitem/base.html
@@ -20,7 +20,7 @@
     <title>{{ title }}</title>
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 <header>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container">
