Пагинация перенесена в футер

--- a/baseitems/templates/baseitem/about.html
+++ b/baseitems/templates/baseitem/about.html
@@ -13,8 +13,12 @@
     </div>
 {% endblock %}
 {% block footer %}
-    <footer class="mt-auto py-3 bg-dark">
-        <div class="container">
-            <p class="m-2 text-center text-white">Copyright &copy; Baks Hi-Tech store 2024</p>
-        </div>
-    </footer> {% endblock %}
+
+    <div class="mt-auto">
+        <footer class="mt-auto py-1 bg-dark">
+            <div class="container">
+                <p class="m-2 text-center text-white">Copyright &copy; Baks Hi-Tech store 2024</p>
+            </div>
+        </footer>
+    </div>
+{% endblock %}
