--- a/baseitems/templates/baseitem/index.html
+++ b/baseitems/templates/baseitem/index.html
@@ -7,8 +7,11 @@
 
 {% block content %} <h1 class="mt-5 pt-5"><strong>{{ content }}</strong></h1> {% endblock %}
 {% block footer %}
-    <footer class="mt-auto py-3 bg-dark">
-        <div class="container">
-            <p class="m-2 text-center text-white">Copyright &copy; Baks Hi-Tech store 2024</p>
-        </div>
-    </footer> {% endblock %}
+    <div class="mt-auto">
+        <footer class="mt-auto py-1 bg-dark">
+            <div class="container">
+                <p class="m-2 text-center text-white">Copyright &copy; Baks Hi-Tech store 2024</p>
+            </div>
+        </footer>
+    </div>
+{% endblock %}
