--- a/baseitems/templates/baseitem/base.html
+++ b/baseitems/templates/baseitem/base.html
@@ -92,9 +92,8 @@
                     {% show_category as categories %}
                     {% if categories %}
                         {% for cat in categories %}
-                            <li><a class="dropdown-item text-white" href="{% url 'goods:catalog' cat.slug %}">{{ cat.name }}</a>
+                            <li><a class="dropdown-item text-white" href="{{cat.get_absolute_url}}">{{ cat.name }}</a>
                             </li>
-
                         {% endfor %}
                     {% endif %}
 
