--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -13,39 +13,46 @@
                 Фильтры
             </button>
 
-            <form action="{% url 'catalog:catalog' cat_slug %}" method="get" class="dropdown-menu bg-dark"
-                  data-bs-theme="dark">
-                <div class="form-check text-white mx-3">
-                    <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault" value="on"
-                           {% if request.GET.on_sale == 'on' %}checked{% endif %}>
-                    {#                    <input type="hidden" name="q" value="request.GET.q">#}
-                    <label class="form-check-label" for="flexCheckDefault">
-                        Товары по акции
-                    </label>
-                </div>
-                <p class="text-white mx-3 mt-3">Сортировать:</p>
-                <div class="form-check text-white mx-3">
-                    <input class="form-check-input" type="radio" name="order" id="flexRadioDefault1" value="default"
-                           {% if request.GET.order == 'default' or request.GET.order == None %}checked{% endif %}>
-                    <label class="form-check-label" for="flexRadioDefault1">
-                        По умолчанию
-                    </label>
-                </div>
-                <div class="form-check text-white mx-3">
-                    <input class="form-check-input" type="radio" name="order" id="flexRadioDefault2" value="price"
-                           {% if request.GET.order == 'price' %}checked{% endif %}>
-                    <label class="form-check-label" for="flexRadioDefault2">
-                        От дешевых к дорогим
-                    </label>
-                </div>
-                <div class="form-check text-white mx-3">
-                    <input class="form-check-input" type="radio" name="order" id="flexRadioDefault3" value="-price"
-                           {% if request.GET.order == '-price' %}checked{% endif %}>
-                    <label class="form-check-label" for="flexRadioDefault3">
-                        От дорогих к дешевым
-                    </label>
-                </div>
-                <button type="submit" class="btn btn-primary mx-3 mt-3">Применить</button>
+            {% if request.GET.q %}
+                <form action="{% url 'catalog:search' %}" method="get" class="dropdown-menu bg-dark"
+                      data-bs-theme="dark">
+            {% else %}
+                <form action="{% url 'catalog:catalog' cat_slug %}" method="get" class="dropdown-menu bg-dark"
+                      data-bs-theme="dark">
+            {% endif %}
+            <div class="form-check text-white mx-3">
+                <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault" value="on"
+                       {% if request.GET.on_sale == 'on' %}checked{% endif %}>
+                {% if request.GET.q %}
+                    <input type="hidden" name="q" value="{{ request.GET.q }}">
+                {% endif %}
+                <label class="form-check-label" for="flexCheckDefault">
+                    Товары по акции
+                </label>
+            </div>
+            <p class="text-white mx-3 mt-3">Сортировать:</p>
+            <div class="form-check text-white mx-3">
+                <input class="form-check-input" type="radio" name="order" id="flexRadioDefault1" value="default"
+                       {% if request.GET.order == 'default' or request.GET.order == None %}checked{% endif %}>
+                <label class="form-check-label" for="flexRadioDefault1">
+                    По умолчанию
+                </label>
+            </div>
+            <div class="form-check text-white mx-3">
+                <input class="form-check-input" type="radio" name="order" id="flexRadioDefault2" value="price"
+                       {% if request.GET.order == 'price' %}checked{% endif %}>
+                <label class="form-check-label" for="flexRadioDefault2">
+                    От дешевых к дорогим
+                </label>
+            </div>
+            <div class="form-check text-white mx-3">
+                <input class="form-check-input" type="radio" name="order" id="flexRadioDefault3" value="-price"
+                       {% if request.GET.order == '-price' %}checked{% endif %}>
+                <label class="form-check-label" for="flexRadioDefault3">
+                    От дорогих к дешевым
+                </label>
+            </div>
+            <button type="submit" class="btn btn-primary mx-3 mt-3">Применить</button>
             </form>
         </div>
         <!-- Карта товара -->
