--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -15,17 +15,25 @@
             <div class="row justify-content-center">
                 <div class="col-md-6 bg-white p-4 mb-4 mx-3 rounded custom-shadow">
                     <h2 class="text-center mb-4">Авторизация</h2>
-                    <form>
-                        <div class="mb-3">
-                            <label for="username" class="form-label">Имя пользователя</label>
-                            <input type="text" class="form-control" id="username"
-                                   placeholder="Введите ваше имя пользователя" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Пароль</label>
-                            <input type="password" class="form-control" id="password" placeholder="Введите ваш пароль"
-                                   required>
-                        </div>
+                    <form action="{% url 'user:login' %}" method="POST">
+                        {% csrf_token %}
+
+                        <div class="form-error" style="width: 400px">{{ form.non_field_errors }}</div>
+                        {% for f in form %}
+                            <p><label class="form-control" for="{{ f.id_for_label }}"
+                                      style="width: 400px">{{ f.label }}</label>{{ f }}</p>
+                            <div class="form-error" style="width: 400px"> {{ f.errors }}</div>
+                        {% endfor %}
+                        {#                        <div class="mb-3">#}
+                        {#                            <label for="username" class="form-label">Имя пользователя</label>#}
+                        {#                            <input type="text" class="form-control" id="username"#}
+                        {#                                   placeholder="Введите ваше имя пользователя" required>#}
+                        {#                        </div>#}
+                        {#                        <div class="mb-3">#}
+                        {#                            <label for="password" class="form-label">Пароль</label>#}
+                        {#                            <input type="password" class="form-control" id="password" placeholder="Введите ваш пароль"#}
+                        {#                                   required>#}
+                        {#                        </div>#}
                         <button type="submit" class="btn btn-dark btn-block">Войти</button>
                     </form>
                     <div class="mt-3">
@@ -35,7 +43,8 @@
                     <div class="text-center">
                         <p>Или авторизуйтесь через:</p>
                         <a href="#" class="btn btn-dark">
-                            <img class="mx-1" src="{% static 'deps/icons/google.svg' %}" alt="Catalog Icon" width="16" height="16">
+                            <img class="mx-1" src="{% static 'deps/icons/google.svg' %}" alt="Catalog Icon" width="16"
+                                 height="16">
                             Google
                         </a>
                         <a href="#" class="btn btn-dark">
@@ -44,7 +53,8 @@
                             Facebook
                         </a>
                         <a href="#" class="btn btn-dark">
-                            <img class="mx-1" src="{% static 'deps/icons/github.svg' %}" alt="Catalog Icon" width="16" height="16">
+                            <img class="mx-1" src="{% static 'deps/icons/github.svg' %}" alt="Catalog Icon" width="16"
+                                 height="16">
                             GitHub
                         </a>
                     </div>
@@ -52,6 +62,8 @@
             </div>
         </div>
     </div>
+
+
 
 {% endblock %}
 
