--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -15,14 +15,14 @@
                     <form>
                         <div class="row">
                             <div class="col-md-6 mb-3">
-                                <label for="firstName" class="form-label">Имя*</label>
+                                <label for="firstName" class="form-label">Имя</label>
                                 <input type="text" class="form-control" id="firstName"
-                                       placeholder="Введите ваше имя" required>
+                                       placeholder="Введите ваше имя">
                             </div>
                             <div class="col-md-6 mb-3">
-                                <label for="lastName" class="form-label">Фамилия*</label>
+                                <label for="lastName" class="form-label">Фамилия</label>
                                 <input type="text" class="form-control" id="lastName"
-                                       placeholder="Введите вашу фамилию" required>
+                                       placeholder="Введите вашу фамилию">
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label for="username" class="form-label">Имя пользователя*</label>
