--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -18,22 +18,25 @@
                     <form action="{% url 'user:login' %}" method="POST">
                         {% csrf_token %}
 
-                        <div class="form-error" style="width: 400px">{{ form.non_field_errors }}</div>
-                        {% for f in form %}
-                            <p><label class="form-control" for="{{ f.id_for_label }}"
-                                      style="width: 400px">{{ f.label }}</label>{{ f }}</p>
-                            <div class="form-error" style="width: 400px"> {{ f.errors }}</div>
-                        {% endfor %}
-                        {#                        <div class="mb-3">#}
-                        {#                            <label for="username" class="form-label">Имя пользователя</label>#}
-                        {#                            <input type="text" class="form-control" id="username"#}
-                        {#                                   placeholder="Введите ваше имя пользователя" required>#}
-                        {#                        </div>#}
-                        {#                        <div class="mb-3">#}
-                        {#                            <label for="password" class="form-label">Пароль</label>#}
-                        {#                            <input type="password" class="form-control" id="password" placeholder="Введите ваш пароль"#}
-                        {#                                   required>#}
-                        {#                        </div>#}
+                        <div class="mb-3">
+                            <label for="id_username" class="form-label">Имя пользователя или Email</label>
+                            <input type="text" class="form-control" name="username" id="id_username"
+                                   placeholder="Введите имя пользователя или Email" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="id_password" class="form-label">Пароль</label>
+                            <input type="password" class="form-control" name="password" id="id_password"
+                                   placeholder="Введите ваш пароль"
+                                   required>
+                        </div>
+
+                        {#                                                <div class="form-error" style="width: 400px">{{ form.non_field_errors }}</div>#}
+                        {#                                                {% for f in form %}#}
+                        {#                                                    <p><label class="form-control" for="{{ f.id_for_label }}"#}
+                        {#                                                              style="width: 400px">{{ f.label }}</label>{{ f }}</p>#}
+                        {#                                                    <div class="form-error" style="width: 400px"> {{ f.errors }}</div>#}
+                        {#                                              {% endfor %}#}
+
                         <button type="submit" class="btn btn-dark btn-block">Войти</button>
                     </form>
                     <div class="mt-3">
