--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,8 @@
                             <a class="nav-link  text-white" href="{% url 'user:login' %}">Войти</a>
                         </li>
                     {% endif %}
-                    <li class="nav-item dropdown ">
+                    {% if user.is_authenticated %}
+                        <li class="nav-item dropdown ">
                         <a class="nav-link dropdown-toggle text-white" href="#" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
                             Мой профиль
@@ -65,21 +66,22 @@
                             <li><a class="dropdown-item  text-white" href="carts/cart.html">Корзина</a></li>
                             <li><a class="dropdown-item  text-white" href="{% url "user:profile" %}">Личный кабинет</a>
                             </li>
+                            {% if user.is_staff %}
                             <li><a class="dropdown-item  text-white" href="{% url 'admin:index' %}">Админ панель</a>
                             </li>
-                            {% if user.is_authenticated %}
+                            {% endif %}
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                                <li>
-                                    <form action="{% url 'user:logout' %}" method="post">
-                                        {% csrf_token %}
-                                        <button class="dropdown-item  text-white" type="submit">Выйти</button>
-                                    </form>
+                            <li>
+                                <form action="{% url 'user:logout' %}" method="post">
+                                    {% csrf_token %}
+                                    <button class="dropdown-item  text-white" type="submit">Выйти</button>
+                                </form>
+                            </li>
 
-                                </li>
-                            {% endif %}
                         </ul>
+                    {% endif %}
                     </li>
                 </ul>
                 <form class="d-flex" role="search" action="{% url "catalog:search" %}" method="GET">
@@ -202,6 +204,7 @@
             </div>
             <div class="col-lg-10">
                 <!-- Контент на странице -->
+                {% include 'includes/notifications.html' %}
                 {% block content %} {% endblock %}
             </div>
         </div>
