--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -17,7 +17,7 @@
                     <h2 class="text-center mb-4">Авторизация</h2>
                     <form action="{% url 'user:login' %}" method="POST">
                         {% csrf_token %}
-                        <div class="form-error" style="width: 400px">{{ form.non_field_errors }}</div>
+                        {#                        <div class="form-error" style="width: 400px">{{ form.non_field_errors }}</div>#}
                         <div class="mb-3">
                             <label for="id_username" class="form-label">Имя пользователя или Email</label>
                             <input type="text" class="form-control" name="username" id="id_username"
@@ -29,9 +29,10 @@
                                    placeholder="Введите ваш пароль"
                                    required>
                         </div>
-                        <div class="mb-3">                       {{ form.captcha }}                        </div>
 
-                        <div class="form-error" style="width: 400px">{{ form.captcha.errors }}</div>
+                        {#                        <div class="mb-3">                       {{ form.captcha }}                        </div>#}
+                        {##}
+                        {#                        <div class="form-error" style="width: 400px">{{ form.captcha.errors }}</div>#}
                         {#                                                {% for f in form %}#}
                         {#                                                    <p><label class="form-control" for="{{ f.id_for_label }}"#}
                         {#                                                              style="width: 400px">{{ f.label }}</label>{{ f }}</p>#}
@@ -40,6 +41,15 @@
 
                         <button type="submit" class="btn btn-dark btn-block">Войти</button>
                         {{ captcha }}
+{#                        <div>#}
+{#                        {% if form.errors %}#}
+{#                            {% for error in form.errors.as_data.values %}#}
+{#                                {% for data in error.0 %}#}
+{#                                    <p>{{ data }}</p>#}
+{#                                {% endfor %}#}
+{#                            {% endfor %}#}
+{#                        {% endif %}#}
+{#                        </div>#}
                     </form>
                     <div class="mt-3">
                         <a href="#">Забыли пароль?</a> | <a href="{% url 'user:registration' %}">Создать аккаунт</a>
