--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -72,7 +72,7 @@
                             {% else %}
                                 <p><strong>{{ good.real_price }} $</strong></p>
                             {% endif %}
-                            <a href="#" class="btn add-to-cart">
+                            <a href="{% url 'carts:cart_add' good.slug %}" class="btn add-to-cart">
                                 <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
                                      width="32" height="32">
                             </a>
