--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -52,7 +52,7 @@
                             <p class="card-text">Цена: <strong>{{ good.real_price }} $</strong></p>
                             <h5 class="card-title">{{ good.name }}</h5>
                             <p class="card-text">{{ good.description }}</p>
-                            <a href="#" class="btn btn-dark add-to-cart">Добавить в корзину</a>
+                            <a href="{% url 'carts:cart_add' good.slug %}" class="btn btn-dark add-to-cart">Добавить в корзину</a>
                         </div>
                     </div>
                 </div>
