--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -3,6 +3,10 @@
 {% load goods_tags %}
 
 
+{% block cart_modal_window %}
+    {% include "includes/cart_button.html" %}
+{% endblock %}
+
 {% block content %}
     <!-- Контент на странице -->
     <div class="row">
