--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -4,6 +4,11 @@
 <!-- Стиль footer-a для главной страницы -->
 
 <!-- Favicons for different platforms -->
+{% block cart_modal_window %}
+    {% include "includes/cart_button.html" %}
+{% endblock %}
+
+
 
 {% block content %}
     <!-- Контент на странице -->
