--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 
+
 {% block content %}
     <div class="container">
         <div class="row mt-1">
@@ -59,6 +60,10 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block cart_modal_window %}
+    {% include "includes/cart_button.html" %}
 {% endblock %}
 
 {% block footer %}
