--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,11 +1,16 @@
 {% extends 'base.html' %}
 {%  load static %}
 
+{% load carts_tags %}
+
 <!-- Стиль footer-a для главной страницы -->
 
 <!-- Favicons for different platforms -->
 
 {% block content %}
+
+
+
 <!-- Контент на странице -->
                     <div class="row">
                         <div class="container mt-5">
@@ -67,12 +72,13 @@
                                     </div>
                                 </div>
                                 <!-- Корзина -->
+                                {% user_carts request as carts %}
                                 <div class="col-md-7">
                                     <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
                                         <h3 class="text-center mb-4">Корзина</h3>
                                         <div class="container" id="cart-items-container">
                                             <!-- Разметка корзины -->
-                                            {% include 'carts/includes/include_carts.html' %}
+                                        {% include 'carts/includes/include_carts.html' %}
                                             <!-- Закончилась разметка корзины -->
                                         </div>
                                         <a class="btn btn-dark" href="../orders/create_order.html">
